test_output.txt
 Downloading crates ...
  Downloaded globwalk v0.9.1
  Downloaded either v1.15.0
  Downloaded predicates-core v1.0.9
  Downloaded futures v0.3.31
  Downloaded quick-error v1.2.3
  Downloaded rand_xorshift v0.4.0
  Downloaded lazy_static v1.5.0
  Downloaded unarray v0.1.4
  Downloaded serial_test_derive v3.2.0
  Downloaded termtree v0.5.1
  Downloaded doc-comment v0.3.3
  Downloaded difflib v0.4.0
  Downloaded atty v0.2.14
  Downloaded wait-timeout v0.2.1
  Downloaded rusty-fork v0.3.1
  Downloaded mockito v1.7.1
  Downloaded yaml-rust v0.4.5
  Downloaded rayon-core v1.13.0
  Downloaded yamllint-rs v0.1.4
  Downloaded ignore v0.4.24
  Downloaded crossbeam-epoch v0.9.18
  Downloaded scc v2.4.0
  Downloaded regex v1.12.2
  Downloaded aho-corasick v1.1.3
  Downloaded rayon v1.11.0
  Downloaded anyhow v1.0.100
  Downloaded walkdir v2.5.0
  Downloaded proptest v1.9.0
  Downloaded similar v2.7.0
  Downloaded colored v3.1.1
  Downloaded crossbeam-utils v0.8.21
  Downloaded bstr v1.12.0
  Downloaded regex-syntax v0.8.8
  Downloaded crossbeam-deque v0.8.6
  Downloaded bit-vec v0.8.0
  Downloaded assert_fs v1.1.3
  Downloaded assert_cmd v2.0.17
  Downloaded sdd v3.0.10
  Downloaded globset v0.4.18
  Downloaded futures-executor v0.3.31
  Downloaded serial_test v3.2.0
  Downloaded predicates v3.1.3
  Downloaded linked-hash-map v0.5.6
  Downloaded same-file v1.0.6
  Downloaded bit-set v0.8.0
  Downloaded assert-json-diff v2.0.2
  Downloaded predicates-tree v1.0.12
  Downloaded regex-automata v0.4.13
  Downloaded normalize-line-endings v0.3.0
  Downloaded float-cmp v0.10.0
   Compiling cfg-if v1.0.4
   Compiling libc v0.2.177
   Compiling memchr v2.7.6
   Compiling smallvec v1.15.1
   Compiling once_cell v1.21.3
   Compiling pin-project-lite v0.2.16
   Compiling futures-core v0.3.31
   Compiling itoa v1.0.17
   Compiling parking_lot_core v0.9.12
   Compiling zerofrom v0.1.6
   Compiling serde_core v1.0.228
   Compiling scopeguard v1.2.0
   Compiling stable_deref_trait v1.2.1
   Compiling futures-sink v0.3.31
   Compiling bytes v1.11.0
   Compiling yoke v0.8.1
   Compiling lock_api v0.4.14
   Compiling regex-syntax v0.8.8
   Compiling parking_lot v0.12.5
   Compiling getrandom v0.3.4
   Compiling slab v0.4.11
   Compiling zerovec v0.11.5
   Compiling mio v1.1.0
   Compiling socket2 v0.6.2
   Compiling futures-channel v0.3.31
   Compiling aho-corasick v1.1.3
   Compiling equivalent v1.0.2
   Compiling serde v1.0.228
   Compiling hashbrown v0.16.1
   Compiling pin-utils v0.1.0
   Compiling indexmap v2.13.0
   Compiling tokio v1.49.0
   Compiling regex-automata v0.4.13
   Compiling crossbeam-utils v0.8.21
   Compiling futures-task v0.3.31
   Compiling futures-io v0.3.31
   Compiling futures-util v0.3.31
   Compiling http v1.4.0
   Compiling bitflags v2.10.0
   Compiling num-traits v0.2.19
   Compiling tinystr v0.8.2
   Compiling litemap v0.8.1
   Compiling fnv v1.0.7
   Compiling zeroize v1.8.2
   Compiling writeable v0.6.2
   Compiling log v0.4.28
   Compiling icu_locale_core v2.1.1
   Compiling crossbeam-epoch v0.9.18
   Compiling http-body v1.0.1
   Compiling zerotrie v0.2.3
   Compiling potential_utf v0.1.4
   Compiling tracing-core v0.1.36
   Compiling anstyle v1.0.13
   Compiling percent-encoding v2.3.2
   Compiling zerocopy v0.8.34
   Compiling tracing v0.1.44
   Compiling icu_collections v2.1.1
   Compiling icu_provider v2.1.1
   Compiling crossbeam-deque v0.8.6
   Compiling rustls-pki-types v1.14.0
   Compiling tokio-util v0.7.18
   Compiling bstr v1.12.0
   Compiling getrandom v0.2.17
   Compiling tower-service v0.3.3
   Compiling untrusted v0.9.0
   Compiling try-lock v0.2.5
   Compiling linux-raw-sys v0.11.0
   Compiling atomic-waker v1.1.2
   Compiling h2 v0.4.13
   Compiling want v0.3.1
   Compiling ring v0.17.14
   Compiling rustix v1.1.2
   Compiling icu_properties_data v2.1.2
   Compiling icu_normalizer_data v2.1.1
   Compiling httparse v1.10.1
   Compiling typenum v1.19.0
   Compiling zmij v1.0.17
   Compiling regex v1.12.2
   Compiling rand_core v0.9.3
   Compiling ryu v1.0.22
   Compiling utf8parse v0.2.2
   Compiling fastrand v2.3.0
   Compiling same-file v1.0.6
   Compiling httpdate v1.0.3
   Compiling walkdir v2.5.0
   Compiling hyper v1.8.1
   Compiling tempfile v3.23.0
   Compiling generic-array v0.14.7
   Compiling anstyle-parse v0.2.7
   Compiling serde_json v1.0.149
   Compiling ppv-lite86 v0.2.21
   Compiling icu_normalizer v2.1.1
   Compiling icu_properties v2.1.2
   Compiling rustls-webpki v0.103.9
   Compiling globset v0.4.18
   Compiling form_urlencoded v1.2.2
   Compiling subtle v2.6.1
   Compiling is_terminal_polyfill v1.70.2
   Compiling colorchoice v1.0.4
   Compiling ipnet v2.11.0
   Compiling predicates-core v1.0.9
   Compiling anstyle-query v1.1.4
   Compiling doc-comment v0.3.3
   Compiling rayon-core v1.13.0
   Compiling base64 v0.22.1
   Compiling anstream v0.6.21
   Compiling rustls v0.23.36
   Compiling ignore v0.4.24
   Compiling hyper-util v0.1.19
   Compiling idna_adapter v1.2.1
   Compiling rand_chacha v0.9.0
   Compiling float-cmp v0.10.0
   Compiling wait-timeout v0.2.1
   Compiling sync_wrapper v1.0.2
   Compiling termtree v0.5.1
   Compiling utf8_iter v1.0.4
   Compiling strsim v0.11.1
   Compiling tower-layer v0.3.3
   Compiling anyhow v1.0.100
   Compiling clap_lex v0.7.6
   Compiling difflib v0.4.0
   Compiling normalize-line-endings v0.3.0
   Compiling clap_builder v4.5.50
   Compiling predicates v3.1.3
   Compiling tower v0.5.3
   Compiling idna v1.1.0
   Compiling predicates-tree v1.0.12
   Compiling tokio-rustls v0.26.4
   Compiling rand v0.9.2
   Compiling serde_urlencoded v0.7.1
   Compiling crypto-common v0.1.7
   Compiling block-buffer v0.10.4
   Compiling webpki-roots v1.0.5
   Compiling http-body-util v0.1.3
   Compiling futures-executor v0.3.31
   Compiling serde_spanned v0.6.9
   Compiling toml_datetime v0.6.11
   Compiling linked-hash-map v0.5.6
   Compiling bit-vec v0.8.0
   Compiling unicode-width v0.2.2
   Compiling sdd v3.0.10
   Compiling winnow v0.7.14
   Compiling toml_write v0.1.2
   Compiling either v1.15.0
   Compiling assert_cmd v2.0.17
   Compiling unsafe-libyaml v0.2.11
   Compiling quick-error v1.2.3
   Compiling iri-string v0.7.10
   Compiling serde_yaml v0.9.34+deprecated
   Compiling toml_edit v0.22.27
   Compiling rusty-fork v0.3.1
   Compiling rayon v1.11.0
   Compiling tower-http v0.6.8
   Compiling scc v2.4.0
   Compiling console v0.15.11
   Compiling bit-set v0.8.0
   Compiling yaml-rust v0.4.5
   Compiling thiserror v1.0.69
   Compiling futures v0.3.31
   Compiling hyper-rustls v0.27.7
   Compiling digest v0.10.7
   Compiling clap v4.5.50
   Compiling url v2.5.8
   Compiling globwalk v0.9.1
   Compiling assert-json-diff v2.0.2
   Compiling rand_xorshift v0.4.0
   Compiling atty v0.2.14
   Compiling serial_test_derive v3.2.0
   Compiling unarray v0.1.4
   Compiling colored v3.1.1
   Compiling similar v2.7.0
   Compiling cpufeatures v0.2.17
   Compiling iana-time-zone v0.1.64
   Compiling lazy_static v1.5.0
   Compiling shell-words v1.1.1
   Compiling dialoguer v0.11.0
   Compiling yamllint-rs v0.1.4
   Compiling chrono v0.4.43
   Compiling mockito v1.7.1
   Compiling serial_test v3.2.0
   Compiling sha2 v0.10.9
   Compiling proptest v1.9.0
   Compiling include_dir v0.7.4
   Compiling reqwest v0.12.28
   Compiling assert_fs v1.1.3
   Compiling toml v0.8.23
   Compiling minijinja v2.15.1
   Compiling jlo v8.1.5 (/app)
error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/testing/mock_workspace_store.rs:157:13
    |
157 |             AppError::Io(std::io::Error::new(std::io::ErrorKind::NotFound, "Mock file not found"))
    |             ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
157 -             AppError::Io(std::io::Error::new(std::io::ErrorKind::NotFound, "Mock file not found"))
157 +             AppError::Io { message: /* value */, kind: /* value */ }
    |

For more information about this error, try `rustc --explain E0533`.
error: could not compile `jlo` (lib test) due to 1 previous error
